; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_print_route_options.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_route.c_print_route_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.route_option_list = type { i32, %struct.route_option* }
%struct.route_option = type { %struct.route_option* }

@RG_ENABLE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"  [redirect_default_gateway local=%d]\00", align 1
@RG_LOCAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_route_options(%struct.route_option_list* %0, i32 %1) #0 {
  %3 = alloca %struct.route_option_list*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.route_option*, align 8
  store %struct.route_option_list* %0, %struct.route_option_list** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.route_option_list*, %struct.route_option_list** %3, align 8
  %7 = getelementptr inbounds %struct.route_option_list, %struct.route_option_list* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load i32, i32* @RG_ENABLE, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = load %struct.route_option_list*, %struct.route_option_list** %3, align 8
  %15 = getelementptr inbounds %struct.route_option_list, %struct.route_option_list* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = load i32, i32* @RG_LOCAL, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  %20 = zext i1 %19 to i32
  %21 = call i32 @msg(i32 %13, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %20)
  br label %22

22:                                               ; preds = %12, %2
  %23 = load %struct.route_option_list*, %struct.route_option_list** %3, align 8
  %24 = getelementptr inbounds %struct.route_option_list, %struct.route_option_list* %23, i32 0, i32 1
  %25 = load %struct.route_option*, %struct.route_option** %24, align 8
  store %struct.route_option* %25, %struct.route_option** %5, align 8
  br label %26

26:                                               ; preds = %33, %22
  %27 = load %struct.route_option*, %struct.route_option** %5, align 8
  %28 = icmp ne %struct.route_option* %27, null
  br i1 %28, label %29, label %37

29:                                               ; preds = %26
  %30 = load %struct.route_option*, %struct.route_option** %5, align 8
  %31 = load i32, i32* %4, align 4
  %32 = call i32 @print_route_option(%struct.route_option* %30, i32 %31)
  br label %33

33:                                               ; preds = %29
  %34 = load %struct.route_option*, %struct.route_option** %5, align 8
  %35 = getelementptr inbounds %struct.route_option, %struct.route_option* %34, i32 0, i32 0
  %36 = load %struct.route_option*, %struct.route_option** %35, align 8
  store %struct.route_option* %36, %struct.route_option** %5, align 8
  br label %26

37:                                               ; preds = %26
  ret void
}

declare dso_local i32 @msg(i32, i8*, i32) #1

declare dso_local i32 @print_route_option(%struct.route_option*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
